[project]
name = "aimbat"
version = "2.0.0-dev0"
description = "AIMBAT: Automated and Interactive Measurement of Body-wave Arrival Times."
authors = [
    { name = "Xiaoting Lou", email = "xlou@u.northwestern.edu" },
    { name = "Simon M. Lloyd", email = "simon@slloyd.net" },
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "pysmo",
    "loguru>=0.7.3",
    "sqlmodel>=0.0.24",
    "rich>=13.9.4",
    "matplotlib>=3.10.6",
    "pyside6>=6.9.2",
    "pyqtgraph>=0.13.7",
    "jupyter-rfb>=0.5.3",
    "cyclopts>=3.24.0",
    "pydantic-settings>=2.10.1",
]

[project.urls]
Documentation = "https://aimbat.pysmo.org"

[project.scripts]
aimbat = "aimbat.app:app"

[dependency-groups]
test = [
    "nbmake>=1.5.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-mpl>=0.17.0",
    "pytest-mypy>=1.0.1",
    "pytest-qt>=4.5.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.13.0",
]
dev = [
    "black[jupyter]>=25.1.0",
]
docs = [
    "ipympl>=0.9.7",
    "jupyterlab>=4.4.7",
    "markdown-include>=0.8.1",
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.19",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.30.0",
    "termynal>=0.13.1",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
    "docs",
]

[tool.uv.sources]
pysmo = { git = "https://github.com/pysmo/pysmo", rev = "master" }

[tool.hatch.build.targets.sdist]
exclude = [
    "tests",
    "docs",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "tests",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# xvfb_width = 1920
# xvfb_height = 1080
testpaths = [
  "tests",
]
mpl-generate-summary = "html"
mpl-use-full-test-name = true

[tool.mypy]
namespace_packages = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "plt.show()",
    "plt.savefig(.*)",
    "pass",
    ]

[tool.black]
target-version = [
    "py312",
    "py313",
]

[tool.ruff]
line-length = 88
extend-exclude = [
    "sample-data",
    "docs",
    "site",
]
